      "clientCertificateKeyStore*" properties, rather than system properties, as the JSSE doesn't
      make it straightforward to have a non-verifying trust store and the "default" key store.
      
    - Fixed ResultSetMetadata.getColumnName() for result sets returned from
      Statement.getGeneratedKeys() - it was returning null instead of
      "GENERATED_KEY" as in 5.0.x.
      
10-09-07 - Version 5.1.5

    - Released instead of 5.1.4 to pickup patch for BUG#31053
      from 5.0.8.
      
10-09-07 - Version 5.1.4 

    - Added "autoSlowLog" configuration property, overrides 
      "slowQueryThreshold*" properties, driver determines slow
      queries by those that are slower than 5 * stddev of the mean
      query time (outside the 96% percentile).
      
    - Fixed BUG#28256 - When connection is in read-only mode, 
      queries that are wrapped in parentheses incorrectly identified 
      as DML.
       
09-07-07 - Version 5.1.3 RC

	- Setting "useBlobToStoreUTF8OutsideBMP" to "true" tells the
	  driver to treat [MEDIUM/LONG/TINY]BLOB columns as [LONG]VARCHAR
	  columns holding text encoded in UTF-8 that has characters
	  outside the BMP (4-byte encodings), which MySQL server
	  can't handle natively.

	  Set "utf8OutsideBmpExcludedColumnNamePattern" to a regex so that
	  column names matching the given regex will still be treated
	  as BLOBs The regex must follow the patterns used for the
	  java.util.regex package. The default is to exclude no columns,
	  and include all columns.

	  Set "utf8OutsideBmpIncludedColumnNamePattern" to specify exclusion
	  rules to "utf8OutsideBmpExcludedColumnNamePattern". The regex must
	  follow the patterns used for the java.util.regex package.

	- New methods on com.mysql.jdbc.Statement: setLocalInfileInputStream()
	  and getLocalInfileInputStream().

	  setLocalInfileInputStream() sets an InputStream instance that will be used to send data
      to the MySQL server for a "LOAD DATA LOCAL INFILE" statement