@@ -36,6 +36,9 @@ nn-nn-08 - Version 5.1.6
       Statement.getGeneratedKeys() - it was returning null instead of
       "GENERATED_KEY" as in 5.0.x.
       
+    - Simplified the JBoss connection validator by piggy-backing on the
+      special "ping" syntax rather than trying to do a bunch of reflection.
+      
 10-09-07 - Version 5.1.5
 
     - Released instead of 5.1.4 to pickup patch for BUG#31053
